--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 services:
   coinflip:
     build:
-      context: .
+      context: ../../Desktop
       dockerfile: docker/Dockerfile
     container_name: coinflip
     ports:
