--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /src
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . .
+COPY ../../../Desktop .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /out/coinflip-server ./cmd/coinflip-server
 
 # --- run stage ---
