--- a/docker/db/Dockerfile
+++ b/docker/db/Dockerfile
@@ -5,8 +5,7 @@ WORKDIR /src
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . .
-
+COPY ../../../Desktop .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /out/coinflip-server ./cmd/coinflip-server
 
 # --- run stage ---
@@ -18,4 +17,5 @@ COPY --from=builder /out/coinflip-server /app/coinflip-server
 
 USER appuser
 EXPOSE 8080
+
 ENTRYPOINT ["/app/coinflip-server"]
